--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 atomicwrites==1.3.0
 attrs==19.1.0
 Django==2.2.3
+gunicorn==19.9.0
 importlib-metadata==0.18
 more-itertools==7.2.0
 packaging==19.0
