--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 atomicwrites==1.3.0
 attrs==19.1.0
+dj-config-url==0.1.1
+dj-database-url==0.5.0
 Django==2.2.3
+django-heroku==0.3.1
 gunicorn==19.9.0
 importlib-metadata==0.18
 more-itertools==7.2.0
 packaging==19.0
 Pillow==6.1.0
 pluggy==0.12.0
+psycopg2==2.8.3
 py==1.8.0
 pyparsing==2.4.0
 pytest==5.0.1
+python-dotenv==0.10.3
 pytz==2019.1
 six==1.12.0
 sqlparse==0.3.0
 wcwidth==0.1.7
+whitenoise==4.1.3
 zipp==0.5.2
